Bug 103477 - FILEOPEN: PPTX - Bullet point has incorrect color
Summary: FILEOPEN: PPTX - Bullet point has incorrect color
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2 all versions
Hardware: All All
: medium normal
Assignee: Muthu Subramanian
URL:
Whiteboard: target:5.4.0
Keywords: bibisected, bisected, filter:pptx, regression
Depends on:
Blocks: Bullet-Number-Outline-Lists PPTX
  Show dependency treegraph
 
Reported: 2016-10-24 18:29 UTC by Yousuf Philips (jay) (retired)
Modified: 2022-03-23 14:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2016-10-24 18:29:03 UTC
Steps:
1) Open attachment 128214 [details]
2) Notice bullet points are yellow though they are black in MS Word 2010 (attachment 128215 [details])

Version: 5.3.0.0.alpha1+
Build ID: 928776b734c6aa188151bbce048d5bef4486dce7
CPU Threads: 2; OS Version: Linux 3.19; UI Render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-10-23_00:39:08
Locale: en-US (en_US.UTF-8); Calc: group
Comment 1 Xisco Faulí 2016-10-24 19:30:58 UTC
Confirmed in 

Version: 5.3.0.0.alpha0+
Build ID: 8974b0fafb18f9dd3f2c0e175a3255b80e4c249e
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

and

Version: 4.1.0.0.alpha1+ Build ID: a2c9d4f8bbde97f175bae4df771273a61251f40

but not in 

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 2 raal 2016-10-24 19:54:52 UTC
This seems to have begun at the below commit.
Adding Cc: to Muthu Subramanian ; Could you possibly take a look at this one?
Thanks
 9f5e9ca9fa90564c56641882578227f0f35af5c1 is the first bad commit
commit 9f5e9ca9fa90564c56641882578227f0f35af5c1
Author: Matthew Francis <mjay.francis@gmail.com>
Date:   Fri Sep 18 11:04:49 2015 +0800

    source-hash-78a20557601d9ca7b446df0cffa72398576741ed
    
    commit 78a20557601d9ca7b446df0cffa72398576741ed
    Author:     Felix Zhang <fezhang@suse.com>
    AuthorDate: Thu Apr 25 19:22:29 2013 +0530
    Commit:     Muthu Subramanian <sumuthu@suse.com>
    CommitDate: Thu Apr 25 19:23:34 2013 +0530
    
        bnc#793414: Bullet points are not indented correctly.
Comment 3 Muthu Subramanian 2016-10-30 18:11:51 UTC
Not exactly a regression, bullet colors weren't right before that commit.
[Maybe you see it as a regression, because it is 'black' (being default) in the older versions ;) ]
Comment 4 Commit Notification 2016-12-01 07:41:37 UTC
Muthu Subramanian committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3770a6a3f3bd3e9c3f71a346b9db895e5bf0df31

tdf#103477 buClrTx => use text color instead

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2016-12-01 08:47:01 UTC
Muthu Subramanian committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6e5e55c29eee285e56fe7f9708e9faf3ad62eec2

tdf#103477 Add unit test

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2017-03-01 11:14:46 UTC
Hello,
Is this bug fixed?
If so, could you please close it as RESOLVED FIXED?
Comment 7 Yousuf Philips (jay) (retired) 2017-03-02 08:25:24 UTC
Verified the bullets are black

Version: 5.4.0.0.alpha0+
Build ID: 36de6c50684c8241969a2064d30aff41e0bc5d97
CPU threads: 2; OS: Linux 3.19; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-02-22_23:33:52
Locale: en-US (en_US.UTF-8); Calc: group
Comment 8 vihsa 2017-05-29 13:26:51 UTC
per comment 7, verified.