tdf#103477 buClrTx => use text color instead

Change-Id: I82d9231d2d0ea95cadc803f9a8dab9c23b88a677
Reviewed-on: https://gerrit.libreoffice.org/30403
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: jan iversen <jani@documentfoundation.org>